k8s/mlflow/mlflow_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
  namespace: pfe
spec:
  selector:
    app: mlflow
  ports:
    - port: 5000
      targetPort: 5000
